--- a/po/wesnoth-sotbe/cs.po
+++ b/po/wesnoth-sotbe/cs.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-03-16 20:25+0100\n"
+"PO-Revision-Date: 2010-04-10 16:14+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "MIME-Version: 1.0\n"
@@ -3180,9 +3180,8 @@ msgstr "Trpasličí ležení"
 
 #. [side]: type=Bandit, id=Sagmar
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:87
-#, fuzzy
 msgid "Sagmar"
-msgstr "Sam"
+msgstr "Sagmar"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:98
@@ -4204,12 +4203,11 @@ msgstr "Zadržte! O co tu pro všechno na světě jde!"
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:679
-#, fuzzy
 msgid ""
 "Howgarth? You and your interfering alliance always show up at the worst "
 "possible time."
 msgstr ""
-" Howgarthe? Ty a tvoje vlezlá aliance se vždycky objevíte v nejhorší možnou "
+"Howgarthe? Ty a tvoje vlezlá aliance se vždycky objevíte v nejhorší možnou "
 "dobu."
 
 #. [message]: speaker=Kapou'e
