updated German translation
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42291 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-ei/de.po
+++ b/po/wesnoth-ei/de.po
@@ -1,12 +1,13 @@
 # Translators:
 #  Nils Kneuper <crazy-ivanovic@gmx.net>, 2005 - 2010
+#  Gerfried Fuchs <rhonda@deb.at>, 2010
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2009-10-06 13:16+0100\n"
-"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
+"PO-Revision-Date: 2010-04-28 08:43+0200\n"
+"Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1709,7 +1710,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Vielleicht stirbt er und ich gewinne unsere Schlacht ohne zu kämpfen."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
