--- a/po/wesnoth-lib/de.po
+++ b/po/wesnoth-lib/de.po
@@ -2,13 +2,14 @@
 #  Christoph Berg <Christoph.Berg@kpm-sport.de>, 2005 - 2010
 #  Nils Kneuper <crazy-ivanovic@gmx.net>, 2005 - 2010
 #  HaJo Gurt <gurt@gmx.de>, 2007
+#  Gerfried Fuchs <rhonda@deb.at>, 2010
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-04-02 16:28+0100\n"
-"Last-Translator: Christoph Berg <Christoph.Berg@kpm-sport.de>\n"
+"PO-Revision-Date: 2010-04-28 08:44+0200\n"
+"Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1640,7 +1641,7 @@ msgstr "Erscheinen von Spielern in der Eingangshalle anzeigen"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Die neue Eingangshalle verwenden"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1860,6 +1861,8 @@ msgstr "Die Züge der Einheiten des Computers werden nicht animiert"
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
 msgstr ""
+"Die Sichtung einer gegnerischen Einheit unterbricht die Bewegung Eurer "
+"Einheit"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
@@ -1899,6 +1902,8 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Die neue Eingangshalle verwenden (funktioniert nur nach dem Neuverbinden mit "
+"dem Server)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
