--- a/po/wesnoth/de.po
+++ b/po/wesnoth/de.po
@@ -4,13 +4,14 @@
 #  Gerfried Fuchs <alfie@ist.org>, 2005, 2006
 #  Nils Kneuper <crazy-ivanovic@gmx.net>, 2005, 2006
 #  Christoph Berg <Christoph.Berg@kpm-sport.de>, 2005 - 2010
+#  Gerfried Fuchs <rhonda@deb.at>, 2010
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-04-23 23:59+0100\n"
-"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
+"PO-Revision-Date: 2010-04-28 08:37+0200\n"
+"Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,15 +101,13 @@ msgstr "Klänge der Eingangshalle"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "Mehrspieler"
+msgstr "Standard-KI"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "Mehrspieler"
+msgstr "RCA AI"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
@@ -9791,7 +9790,7 @@ msgstr "Größe: "
 
 #: src/multiplayer_lobby.cpp:119
 msgid "--no games open--"
-msgstr ""
+msgstr "--keine offenen Spiele--"
 
 #: src/multiplayer_lobby.cpp:153
 msgid " (Unknown Era)"
@@ -9839,7 +9838,7 @@ msgstr "Freie Plätze"
 
 #: src/multiplayer_lobby.cpp:737
 msgid "Friends in Game"
-msgstr ""
+msgstr "Freunde im Spiel"
 
 #: src/multiplayer_lobby.cpp:738
 msgid "Filter:"
@@ -9847,32 +9846,40 @@ msgstr "Filter:"
 
 #: src/multiplayer_lobby.cpp:747
 msgid "Skip quickly to the active turn when observing"
-msgstr ""
+msgstr "Beim Beobachten rasch bis zum aktuellen Zug vorspringen"
 
 #: src/multiplayer_lobby.cpp:751
 msgid ""
 "Enable the games filter. If unchecked all games are shown, regardless of any "
 "filter."
 msgstr ""
+"Aktiviert die Spiel-Filter. Wenn dies nicht aktiviert ist, werden alle "
+"Spiele unabhängig von jeglichen Filtern angezeigt."
 
 #: src/multiplayer_lobby.cpp:754
 msgid ""
 "Show all games that do *not* match your filter. Useful for hiding games you "
 "are not interested in."
 msgstr ""
+"Alle Spiele anzeigen, die *nicht* dem Filter entsprechen. Nützlich, um "
+"Spiele zu verstecken, die einen nicht interessieren."
 
 #: src/multiplayer_lobby.cpp:758
 msgid "Only show games that have at least one vacant slot"
-msgstr ""
+msgstr "Nur kanzeigen, die zumindest einen freien Platz haben"
 
 #: src/multiplayer_lobby.cpp:762
 msgid ""
 "Only show games that are played or observed by at least one of your friends"
 msgstr ""
+"Nur Spiele anzeigen, die von zumindest einem deiner Freunde gespielt oder "
+"beobachtet werden."
 
 #: src/multiplayer_lobby.cpp:766
 msgid "Only show games whose title or description contain the entered text"
 msgstr ""
+"Nur Spiele anzeigen, deren Titel oder Beschreibung den angegebenen Text "
+"enthalten"
 
 #: src/multiplayer_lobby.cpp:900
 msgid "Joining this game requires a password."
